fixed catalog btn in header on mobile

--- a/src/scss/styleHeader.scss
+++ b/src/scss/styleHeader.scss
@@ -366,7 +366,7 @@
     color: $greenColor;
   }
 
-  ._hover {
+  ._hover & {
     &::before {
       transform: rotate(-90deg);
     }
